# 2025_radar_station

./: README.md  radar_station.sh
.marscode/: deviceInfo.json
Camera/Data/: 041130220341.mvdat
Camera/log/: error_20250629-150803.81361  error_20250629-150808.81410  error_20250629-150831.81522  error_20250629-150836.81578  error_20250629-150931.82555  warning_20250629-095450.11399  warning_20250629-150431.67609  warning_20250630-111103.301571  warning_20250630-115416.332202
env/opencv/install/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
env/opencv/install/lib/: libopencv_alphamat.so.4.10.0  libopencv_aruco.so.4.10.0  libopencv_bgsegm.so.4.10.0  libopencv_bioinspired.so.4.10.0  libopencv_calib3d.so.4.10.0  libopencv_ccalib.so.4.10.0  libopencv_cudabgsegm.so.4.10.0  libopencv_cudacodec.so.4.10.0  libopencv_cudalegacy.so.4.10.0  libopencv_cudaobjdetect.so.4.10.0  libopencv_cudev.so.4.10.0  libopencv_datasets.so.4.10.0  libopencv_dnn_objdetect.so.4.10.0  libopencv_dnn_superres.so.4.10.0  libopencv_dpm.so.4.10.0  libopencv_face.so.4.10.0  libopencv_features2d.so.4.10.0  libopencv_flann.so.4.10.0  libopencv_freetype.so.4.10.0  libopencv_fuzzy.so.4.10.0  libopencv_hdf.so.4.10.0  libopencv_hfs.so.4.10.0  libopencv_highgui.so.4.10.0  libopencv_img_hash.so.4.10.0  libopencv_imgcodecs.so.4.10.0  libopencv_intensity_transform.so.4.10.0  libopencv_line_descriptor.so.4.10.0  libopencv_mcc.so.4.10.0  libopencv_ml.so.4.10.0  libopencv_objdetect.so.4.10.0  libopencv_optflow.so.4.10.0  libopencv_phase_unwrapping.so.4.10.0  libopencv_photo.so.4.10.0  libopencv_plot.so.4.10.0  libopencv_quality.so.4.10.0  libopencv_rapid.so.4.10.0  libopencv_reg.so.4.10.0  libopencv_rgbd.so.4.10.0  libopencv_saliency.so.4.10.0  libopencv_sfm.so.410  (+18 more)
env/opencv/install/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
image_cloud/: 0.pcd  1.pcd  10.pcd  100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  105.pcd  106.pcd  107.pcd  108.pcd  109.pcd  11.pcd  110.pcd  111.pcd  112.pcd  113.pcd  114.pcd  115.pcd  116.pcd  117.pcd  118.pcd  119.pcd  12.pcd  120.pcd  121.pcd  122.pcd  123.pcd  124.pcd  125.pcd  126.pcd  127.pcd  128.pcd  129.pcd  13.pcd  130.pcd  131.pcd  132.pcd  133.pcd  (+173 more)
log/: latest_build
models/: armor.xml  car.xml
src/camera_driver/mindvision_camera/config/: camera_info.yaml
src/radar_station/: CMakeLists.txt  package.xml
src/radar_station/config/: camera_info.yaml  radar_station_conf.yaml
src/radar_station/include/radar_station/: onnx_box.hpp  radar_station.hpp  robot.hpp
src/radar_station/launch/: radar_station.launch.py
src/radar_station/src/: onnx_box.cpp  radar_station.cpp  robot.cpp
src/radar_station_interface/: CMakeLists.txt  package.xml
src/radar_station_interface/msg/: RobotPosition.msg  RobotPositionArray.msg
src/radar_world_calib/: CMakeLists.txt  package.xml
src/radar_world_calib/include/radar_world_calib/: radar_world_calib.hpp
src/radar_world_calib/src/: radar_world_calib.cpp
src/robot_tracker/: CMakeLists.txt  package.xml
src/robot_tracker/include/robot_tracker/: robot_tracker.hpp
src/robot_tracker/src/: robot_tracker.cpp
